<resources>
    <string name="getverifycode_name">获取验证码</string>
    <string name="weibosdk_demo_share_text_title">分享文字</string>
    <string name="weibosdk_demo_share_image_title">分享图片</string>
    <string name="weibosdk_demo_share_webpage_title">分享网页</string>
    <string name="weibosdk_demo_share_music_title">分享音乐</string>
    <string name="weibosdk_demo_share_video_title">分享视频</string>
    <string name="weibosdk_demo_share_voice_title">分享声音</string>
    <string name="weibosdk_demo_share_webpage_desc">网页描述：XXX</string>
    <string name="weibosdk_demo_share_music_desc">音乐描述：XXX</string>
    <string name="weibosdk_demo_share_video_desc">视频描述：XXX</string>
    <string name="weibosdk_demo_share_voice_desc">声音描述：XXX</string>
    <string name="weibosdk_demo_app_url">https://github.com/mobileresearch/weibo_android_sdk/blob/master/WeiboSDKDemo.apk</string>
    <string name="weibosdk_demo_test_webpage_url">http://news.sina.com.cn/c/2013-10-22/021928494669.shtml</string>
    <string name="weibosdk_demo_test_music_url">http://music.sina.com.cn/yueku/i/2850305.html</string>
    <string name="weibosdk_demo_test_video_url">http://video.sina.com.cn/p/sports/cba/v/2013-10-22/144463050817.html</string>
    <string name="weibosdk_demo_test_voice_url">http://music.sina.com.cn/yueku/i/2850305.html</string>
    <string name="w3g_address_of_shareSDK_weibo">/ts4/index.php?app=w3g&amp;mod=Index&amp;act=detail&amp;weibo_id=</string>
    <string name="w3g_address_of_shareSDK_post">/ts4/index.php?app=w3g&amp;mod=Index&amp;act=detail&amp;post_id=</string>
    <string name="w3g_address_of_share_erweima">/ts4/index.php?app=w3g&amp;mod=Index&amp;act=weibo&amp;uid=</string>
    <string name="dig">%s</string>
    <string name="comment_hint">我也说一句...</string>
    <string name="comment_hint_edit">请输入评论...</string>
    <string name="comment">评论</string>
    <string name="transpond">转发</string>
    <string name="collection">收藏</string>
    <string name="delete">删除</string>
    <string name="denounce">举报</string>
    <string name="done">完成</string>
    <string name="weibo_share">微博分享</string>
    <string name="pengyouquan_share">朋友圈分享</string>
    <string name="weixin_share">微信分享</string>
    <string name="qq_share">QQ</string>
    <string name="new_user_link">注册新帐号</string>
    <string name="refreshing">更新中...</string>
    <string name="please_down">下拉可以刷新</string>
    <string name="please_up">松开可以刷新</string>
    <string name="last_refresh">最后更新于</string>
    <string name="weibo_content">微博正文</string>
    <string name="send_not_content">说点什么吧...</string>
    <string name="comment_checkbox">同时发一条新的分享</string>
    <string name="transpond_checkbox">同时评论该作者</string>
    <string name="publish">发布</string>
    <string name="please_wait">请稍候...</string>
    <string name="loading_more">加载中...</string>
    <string name="comment_list">评论列表</string>
    <string name="follow">关注</string>
    <string name="follow_each">互相关注</string>
    <string name="addfollow">加关注</string>
    <string name="delfollow">取消关注</string>
    <string name="followed">粉丝</string>
    <string name="weibo">分享</string>
    <string name="share">分享</string>
    <string name="atme">\@我</string>
    <string name="athe">TA</string>
    <string name="send_chat">聊天</string>
    <string name="blacklist">加入黑名单</string>
    <string name="unlockblack">解除黑名单</string>
    <string name="add_contact">添加到通讯录</string>
    <string name="recent">联系人</string>
    <string name="chat_title">对话</string>
    <string name="edit">上传头像</string>
    <string name="edit_info">编辑个人资料</string>
    <string name="contact_title">通讯录</string>
    <string name="add_local_contact">添加至联系人</string>
    <string name="app_sets">应用管理</string>
    <string name="app_install">应用已安装</string>
    <string name="app_unstall">应用已卸载</string>
    <string name="unstall_error">卸载失败</string>
    <string name="install_error">安装失败</string>
    <string name="word_limit">输入的字数超过限制</string>
    <string name="add_contact_list">收藏联系人</string>
    <string name="del_contact_list"> 取消收藏 </string>
    <string name="my_contact_list">我的联系人</string>
    <string name="info">资料</string>
    <string name="deinfo">的主页</string>
    <string name="reply">回复</string>
    <string name="message_detail">短消息详情</string>
    <string name="home">首页</string>
    <string name="news">信息</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="sendMessage">发送</string>
    <string name="imageshow">图片浏览</string>
    <string name="imagesave">保存</string>
    <string name="refresh">刷新</string>
    <string name="re_load">加载中，请勿重复点击</string>
    <string name="private_letter">聊天</string>
    <string name="logine">登录</string>
    <string name="register">注册</string>
    <string name="my_sina_weibo">新浪</string>
    <string name="site_change">切换站点</string>
    <string name="refresh_success">刷新成功</string>
    <string name="refresh_error">暂无更多信息</string>
    <string name="search_weibo">搜分享</string>
    <string name="search_user">搜用户</string>
    <string name="search_key">搜索</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="account">帐户</string>
    <string name="send_email">邮件</string>
    <string name="call">电话</string>
    <string name="demo_name">张三</string>
    <string name="no_remind">没有新的提醒</string>
    <string name="category">分类</string>
    <string name="today">今天</string>
    <string name="add_star">加星标</string>
    <string name="overdue">逾期</string>
    <string name="tast_cate_name">任务分类列表</string>
    <string name="input_text_topic">\#请插入话题#</string>
    <string name="input_text_suggest">\#Android建议反馈#</string>
    <string name="input_text_at">\@请输入昵称</string>
    <string name="posts_creat">发布帖子</string>
    <string name="posts_title_hint">标题 （必填）</string>
    <string name="posts_content_hint">请输入内容（必填）</string>
    <string name="search_weiba">搜微吧</string>
    <string name="search_post">搜帖子</string>
    <string name="weiba_tit_follow">我关注的</string>
    <string name="weiba_tit_post">我发表的</string>
    <string name="weiba_tit_comment">我评论的</string>
    <string name="weiba_tit_fiv">我收藏的</string>
    <string name="weiba_posts_detail">帖子详情</string>
    <string name="weiba_com_sf">沙发</string>
    <string name="weiba_com_bd">板凳</string>
    <string name="weiba_com_floor">楼</string>
    <string name="weiba_post_fav">收藏成功</string>
    <string name="weiba_post_unfav">取消收藏</string>
    <string name="weiba_com_post">回复帖子</string>
    <string name="weiba_replay_com">回复评论</string>
    <string name="weiba_post_press"> 您需要关注此微吧才能发帖，确认关注吗？</string>
    <string name="weiba_action_fail"> 操作失败，请重试 </string>
    <string name="net_fail">网络未连接，请检查网络设置</string>
    <string name="font_size">字体大小</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_info">包括用户信息、微博信息和图片</string>
    <string name="clear_cache_alert">确定清除缓存吗？</string>
    <string name="clear_cache_alert_title">提示</string>
    <string name="pic_open_down">2G/3G网络下载图片</string>
    <string name="pic_down_off">关闭图片下载，分享列表无图模式</string>
    <string name="pic_down_on">开启图片下载</string>
    <string name="pic_down_info">当前不再WIFI网络下，是否关闭图片下载，节省流量？</string>
    <string name="pic_down_close_info">您现2G/3G网络下，已关闭图片下载，时候显示图片</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="photo">照片</string>
    <string name="photo_2">墙</string>
    <string name="grid_title">Sociax</string>
    <string name="friendnews">微博</string>
    <string name="mysmail">短邮</string>
    <string name="contact">公司通讯录</string>
    <string name="myinfo">我的主页</string>
    <string name="user_info_tit">个人主页</string>
    <string name="user_info_xx">详细</string>
    <string name="user_info_zl">资料</string>
    <string name="appcenter">应用管理</string>
    <string name="myDigg">博客</string>
    <string name="myfile">文档</string>
    <string name="mytask">任务</string>
    <string name="chat">聊天</string>
    <string name="find_firend">找人</string>
    <string name="myfirend">我的好友</string>
    <string name="my_following">我的关注</string>
    <string name="my_follower">我的粉丝</string>
    <string name="channel">频道</string>
    <string name="information">资讯</string>
    <string name="topic">话题</string>
    <string name="weiba">微吧</string>
    <string name="notice_center">消息通知</string>
    <string name="chang_site">选择站点</string>
    <string name="about">关于我们</string>
    <string name="app_set_settings">系统设置</string>
    <string name="app_set_modify">资料修改</string>
    <string name="app_set_feedback">意见反馈</string>
    <string name="app_set_update">软件更新</string>
    <string name="app_set_logout">注销登录</string>
    <string name="setting_title_generic_else">其他</string>
    <string name="feedback_intro">欢迎提出宝贵意见</string>
    <string name="upload_head">上传头像</string>
    <string name="see_more">展开更多</string>
    <string name="see_less">收起</string>
    <string name="input_key">请输入关键字</string>
    <string name="sys_notify">系统通知</string>
    <string name="all_action">我的关注</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="itemmenu_delete_mDigg">删除分享</string>
    <string name="weibo_more_my_followed">我的粉丝</string>
    <string name="weibo_more_my_follower">我的关注</string>
    <string name="weibo_more_my_weibo">我发布的</string>
    <string name="weibo_more_my_commend">我评论的</string>
    <string name="see_all">查看更多</string>
    <string name="sex">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="task_meun_tilte">列表选项</string>
    <string name="task_tilte">任务选项</string>
    <string name="task_cate_meun_share">分享</string>
    <string name="task_cate_meun_edit">编辑</string>
    <string name="task_cate_meun_del">删除</string>
    <string name="task_cate_add_note">添加一个分类列表</string>
    <string name="task_add_note">添加一个任务</string>
    <string name="task_add_email">添加电子邮件</string>
    <string name="task_add_email_contact">从联系人中选择</string>
    <string name="task_cate_edit">编辑分类列表名称</string>
    <string name="task_desc_edit">编辑任务描述</string>
    <string name="list_share_hint">编辑分类列表名称</string>
    <string name="task_edit">编辑任务</string>
    <string name="task_del">删除任务</string>
    <string name="task_name">任务名称</string>
    <string name="task_detail">任务详情</string>
    <string name="task_contact">我的联系人</string>
    <string name="task_contact_add">添加</string>
    <string name="task_has_c_mail">选择联系人</string>
    <string name="task_has_s_mail">已分享联系人</string>
    <string name="task_to_mail">指派参与人</string>
    <string name="task_s_del">完全取消共享列表</string>
    <string name="task_pleas_add_c">请添加联系人</string>
    <string name="task_d_text">详细内容</string>
    <string name="task_d_deanlin">截至时间</string>
    <string name="task_d_join">参与人</string>
    <string name="task_d_cate">所属分类</string>
    <string name="task_d_text_n">无备注</string>
    <string name="task_d_deanlin_n">无时间</string>
    <string name="task_d_join_n">无参与人</string>
    <string name="ok">确定</string>
    <string name="all_task">全部</string>
    <string name="over_task">已完成</string>
    <string name="tom_task">明日</string>
    <string name="today_a_task">日后</string>
    <string name="no_day_task">无日期</string>
    <string name="all_w_task">全部待办</string>
    <string name="to_task">我指派的</string>
    <string name="from_task">指派给我的</string>
    <string name="search_task">搜索任务</string>
    <string name="setting_title_auto_remind">自动提醒</string>
    <string name="setting_summary_off_auto_remind">关闭自动提醒</string>
    <string name="setting_summary_on_auto_remind">启用自动提醒</string>
    <string name="setting_summary_off_vibrator">关闭震动提醒</string>
    <string name="setting_summary_on_vibrator">启用震动提醒</string>
    <string name="setting_vibrator">震动提醒</string>
    <string name="setting_interval">检测间隔</string>
    <string name="setting_interval_desc">自动检测消息的间隔时间，间隔长省流量</string>
    <string name="area_two">开关设置</string>
    <string name="area_three">系统设置</string>
</resources>