<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_ios"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/horizontalScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/tv_share_to_weichat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_press_selector"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_more_wechat"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="微信"
                android:textColor="@color/font"
                android:textSize="@dimen/shi_si" />

            <Button
                android:id="@+id/tv_share_to_weichatfav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_press_selector"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_more_wecircle"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="朋友圈"
                android:textColor="@color/font"
                android:textSize="@dimen/shi_si" />

            <Button
                android:id="@+id/tv_share_to_sinaweibo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_press_selector"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_more_webo"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="微博"
                android:textColor="@color/font"
                android:textSize="@dimen/shi_si" />

            <Button
                android:id="@+id/tv_share_to_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_press_selector"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_more_qq"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/qq_share"
                android:textColor="@color/font"
                android:textSize="@dimen/shi_si"
                android:visibility="visible" />

            <Button
                android:id="@+id/tv_share_to_qzone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_press_selector"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_more_qzone"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="空间"
                android:textColor="@color/font"
                android:textSize="@dimen/shi_si" />

            <Button
                android:id="@+id/tv_share_to_qqweibo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_press_selector"
                android:drawableTop="@drawable/tv_sinaweibo"
                android:gravity="center_horizontal"
                android:text="腾讯微博"
                android:textColor="@color/font"
                android:textSize="@dimen/shi_si"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="7.5dp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.5dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/tv_more_transpond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_press_selector"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_more_forward"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/transpond"
                android:textColor="@color/font"
                android:textSize="@dimen/shi_si" />


            <Button
                android:id="@+id/tv_more_collection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_press_selector"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_more_collect"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/collection"
                android:textColor="@color/font"
                android:textSize="@dimen/shi_si" />

            <Button
                android:id="@+id/tv_more_denounce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_press_selector"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_more_report"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/denounce"
                android:textColor="@color/font"
                android:textSize="@dimen/shi_si" />
            <!-- 删除 -->
            <Button
                android:id="@+id/tv_more_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_press_selector"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_more_delete"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/delete"
                android:textColor="@color/font"
                android:textSize="@dimen/shi_si"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ccc" />

        <Button
            android:id="@+id/btn_pop_cancel"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@drawable/btn_press_selector"
            android:gravity="center"
            android:paddingBottom="@dimen/append_margin_top"
            android:paddingTop="@dimen/append_margin_top"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>